# xray

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev.client  Dockerfile.dev.server  LICENSE  NOTICE  README.md  biome.json  bun-test-setup.ts  bunfig.toml  commitlint.config.mjs  components.json  compose.dev.yaml  compose.yaml  drizzle.config.ts  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json5  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.claude/commands/: audit-docs.md  worktree.md
.claude/rules/: boundary-validation.md  code-layout.md  comments.md  docs-freshness.md  errors.md  honesty.md  no-lint-suppressions.md  pattern-matching.md  public-repo.md  single-image-distribution.md  supply-chain.md  tdd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  docs-check.yml  docs.yml  publish.yml  secret-scan.yml  supply-chain.yml  test-python-sdk.yml  test.yml  typecheck.yml
biome-plugins/: no-as-cast.grit
docs/: INGEST.md  SDK.md  WIRE.md  _config.yml  architecture.md  index.md  integrate.md  quickstart.md  sdk-python.md  wire-contract.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: Layout.vue  index.ts  style.css
docs/specs/: 0001-audio-ground-truth.md  0001-timeline-clock-alignment.md
examples/livekit-voice-agent/: .env.example  .gitignore  README.md  compose.live.yaml  compose.yaml  livekit.live.yaml  livekit.yaml
examples/livekit-voice-agent/agent/: Dockerfile  main.py  pyproject.toml
examples/livekit-voice-agent/driver/: Dockerfile  live_session.py  pyproject.toml  test_e2e.py
scripts/: agent-webhook-realtime.ts  agent-webhook.ts  build.ts  docker-smoke.sh  new-worktree.sh  seed.ts
scripts/lib/: voice.ts
sdk/python/: README.md  pyproject.toml
sdk/python/.claude/rules/: assert-never.md  no-any.md  typed-boundaries.md
sdk/python/examples/: booking_happy_path.py
sdk/python/src/xray/: __init__.py  _json.py  config.py  conversation.py  errors.py  instrument.py  orchestrator.py  otel.py  trace.py
sdk/python/src/xray/runtime/: __init__.py  _audio_capture.py  _livekit_types.py  base.py  livekit.py  livekit_live.py  sip.py
sdk/python/tests/: test_audio_capture.py  test_conversation.py  test_conversation_live.py  test_errors.py  test_live_runtime.py  test_livekit_runtime.py  test_mint_user_token.py  test_orchestrator.py  test_real_server.py  test_run_live.py  test_sip.py  test_trace.py
server/: handler.test.ts  handler.ts  index.ts
snapshot/: xray.db
src/: app.test.tsx  app.tsx  main.tsx  test-server.ts
src/adapters/: registry.test.ts  registry.ts  test-utils.ts  types.ts
src/adapters/elevenlabs/: adapter.test.ts  adapter.ts  errors.test.ts  errors.ts  test-utils.ts  types.ts
src/adapters/errors/: errors.test.ts  errors.ts
src/client/: app.test.tsx  app.tsx  format.test.ts  format.ts  globals.css  main.errors.ts  main.tsx  source-badge.test.ts  source-badge.ts  test-happy-dom.ts  test-utils.tsx
src/client/api/: api.errors.ts  api.ts  api.types.ts  audio-api.ts  conversation-api.ts  query-client.ts  replays-api.ts  sessions-api.ts
src/client/audio/: audio-with-captions.test.tsx  audio-with-captions.tsx  player-provider.errors.ts  player-provider.test.tsx  player-provider.tsx  stereo-turn-player.tsx  turn-audio.test.tsx  turn-audio.tsx  wavesurfer-playhead.test.tsx  wavesurfer-playhead.ts
src/client/components/: back-link.test.tsx  back-link.tsx  breadcrumbs.test.tsx  breadcrumbs.tsx  clickable-row.test.tsx  clickable-row.tsx  json-tree.test.tsx  json-tree.tsx  xray-logo.tsx
src/client/conversations/: compare-conversations.test.tsx  compare-conversations.tsx  conversation-detail.test.tsx  conversation-detail.tsx  conversations.test.tsx  conversations.tsx  errors.test.ts  errors.ts
src/client/inspector/: errors.test.ts  errors.ts  inspector.test.tsx  inspector.tsx
src/client/lib/: json.test.ts  json.ts  utils.ts
src/client/replay-status/: replay-status.test.tsx  replay-status.tsx
src/client/replays/: compare.test.tsx  compare.tsx  errors.test.ts  errors.ts  replay-diff.test.ts  replay-diff.tsx  replay-modal.test.tsx  replay-modal.tsx  replay-status-badge.tsx  replay-view.test.tsx  replay-view.tsx  run-config-diff.test.ts  run-config-diff.ts  turn-diff.test.ts  turn-diff.ts
src/client/router/: back-link.test.tsx  back-link.tsx  back-to-sessions-link.test.tsx  back-to-sessions-link.tsx  not-found.tsx  root-layout.test.tsx  root-layout.tsx  router.test.ts  router.ts
src/client/trace-tree/: attribution.test.ts  attribution.ts  build-tree.test.ts  build-tree.ts  span-selection.test.tsx  span-selection.tsx  trace-tree.test.tsx  trace-tree.tsx  trace-tree.types.ts  vocab.test.ts  vocab.ts
src/conversations/: conversations.test.tsx  conversations.tsx
src/http/: errors.test.ts  errors.ts  http.test.ts  http.ts  types.ts
src/server/: main.ts  server.test.ts  server.ts
src/server/assertions/: assertions.errors.ts  assertions.evaluator.test.ts  assertions.evaluator.ts  assertions.test-utils.ts  assertions.types.ts
src/server/audio/: audio.errors.test.ts  audio.errors.ts  audio.router.test.ts  audio.router.ts  audio.service.test.ts  audio.service.ts  audio.slice.test.ts  audio.slice.ts  audio.test-utils.ts  audio.turns.test.ts  audio.turns.ts  audio.types.ts  audio.vad.test.ts  audio.vad.ts  audio.wav.test.ts  audio.wav.ts
src/server/conversations/: conversations.errors.test.ts  conversations.errors.ts  conversations.router.test.ts  conversations.router.ts  conversations.service.test.ts  conversations.service.ts  conversations.test-utils.ts  conversations.types.ts
src/server/core/: abort.test.ts  abort.ts  fetch.ts  gemini.test.ts  gemini.ts  redact.test.ts  redact.ts  test-utils.ts  types.ts
src/server/docs/: docs.asyncapi.ts  docs.openapi.ts  docs.router.test.ts  docs.router.ts
src/server/env/: env.test.ts  env.ts  test-utils.ts
src/server/healthz/: healthz.test.ts  healthz.ts
src/server/ingest/: types.ts  (+14 more)
tests/fixtures/: hash-parity.json
(+181 files in other folders)
