[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "xray-py"
version = "0.0.1"
description = "Python SDK for xray — replay/eval for LiveKit voice agents"
readme = "README.md"
license = { text = "Elastic-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Basile Bong" }]
keywords = ["livekit", "voice-agents", "eval", "opentelemetry", "replay"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Testing",
]

dependencies = [
  "httpx>=0.27",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "opentelemetry-exporter-otlp-proto-http>=1.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
livekit = [
  "livekit>=1.0",
  "livekit-api>=1.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/xray-eval/xray"
Repository = "https://github.com/xray-eval/xray"
Issues = "https://github.com/xray-eval/xray/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/xray"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "B", "UP", "SIM"]
